--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
             <version>3.141.59</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.monochromata.cucumber</groupId>
+            <artifactId>reporting-plugin</artifactId>
+            <version>4.0.84</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
